--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>SCOTUS Body Count</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="icon" type="image/png" href="images/favicon.png">
+  <style type="text/css">
+    .google-form iframe {
+        position: fixed;
+        top:0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+  </style>
+</head>
 
 <body>
-  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdVFHstyKpqcwqQDlQu3uzLGG6EW6ewMMoAzCRgap-Em2rP2g/viewform?embedded=true"
-    width="640"
-    height="752"
-    frameborder="0"
-    marginheight="0"
-    marginwidth="0">
-    Loading…
-  </iframe>
+  <div class="container">
+    <div class="row">
+      <div class="twelve column">
+        <div class="google-form">
+          <iframe
+            src="https://docs.google.com/forms/d/e/1FAIpQLSdVFHstyKpqcwqQDlQu3uzLGG6EW6ewMMoAzCRgap-Em2rP2g/viewform?embedded=true"
+            frameborder="0"
+            marginheight="0"
+            marginwidth="0">
+            Loading…
+          </iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
